@@ -1,7 +1,7 @@
 Package: RcppArmadillo
 Type: Package
 Title: Rcpp/Armadillo translation layer
-Version: 0.1.0
+Version: 0.1.1
 Date: $Date$
 Author: Romain Francois and Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel and Romain Francois <RomainAndDirk@r-enthusiasts.com>
@@ -24,7 +24,7 @@ Description: R and Armadillo integration using Rcpp
  capabilities of the Rcpp package for seamless R and C++ integration/
 License: GPL (>= 2)
 LazyLoad: yes
-Depends: Rcpp (>= 0.7.8)
+Depends: Rcpp (>= 0.7.10.1)
 SystemRequirements: Armadillo (>= 0.6.10), Boost
 URL: http://arma.sourceforge.net/, http://dirk.eddelbuettel.com/code/rcpp.html
 OS_type: unix
